[gd_scene load_steps=16 format=4 uid="uid://7q5wdli5jl0d"]

[ext_resource type="Script" uid="uid://dkrdcai6c8yc8" path="res://components/movement/move_towards.gd" id="1_5or4p"]
[ext_resource type="Script" uid="uid://dctcth4djk7lg" path="res://objects/firefly/firefly.gd" id="1_v33uh"]
[ext_resource type="Script" uid="uid://dbwfab24e5om2" path="res://components/movement/collide_and_bounce.gd" id="2_v33uh"]
[ext_resource type="Script" uid="uid://b8lw0lyjc35h0" path="res://components/health/hitbox.gd" id="4_ihlpy"]
[ext_resource type="Script" uid="uid://v1nv1sbuicql" path="res://components/drawing/randomize_speed.gd" id="4_pct7v"]
[ext_resource type="Script" uid="uid://hcck4nf3qor6" path="res://components/health/health.gd" id="5_pct7v"]
[ext_resource type="Script" uid="uid://dvqcrjqt2v8rh" path="res://components/add_score_on_death.gd" id="7_or41v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5or4p"]
radius = 6.0

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_ihlpy"]
_data = PackedByteArray("AAADAAUAAAABAAAAIAAAABgAAAC2AAAAUklGRq4AAABXRUJQVlA4TKIAAAAvH8AFECcgECC0S3LmRkBQ9Nx0QgLCDL/872bMfwDgL7KAQRtJgRYHLIsBcLB5BfiXxS15CRH9F1s2ewk9A+hkAxIg+X0kgQsAZ5rUmegXaDjUGuZEBUBzb4qoAOi19hATsNceQzoVmK6MTgWmdTnLNZF1WT+A/JA/8tN/IH89JF6OrOaDfQD5If+5/hIqgPyGCvz4jMo9APTLtgTyQwA/PgE=")
size_override = Vector2(32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pct7v"]
atlas = SubResource("PortableCompressedTexture2D_ihlpy")
region = Rect2(0, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_or41v"]
atlas = SubResource("PortableCompressedTexture2D_ihlpy")
region = Rect2(16, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksdfs"]
atlas = SubResource("PortableCompressedTexture2D_ihlpy")
region = Rect2(0, 12, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_injpu"]
atlas = SubResource("PortableCompressedTexture2D_ihlpy")
region = Rect2(16, 12, 16, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_88jmm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pct7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or41v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksdfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_injpu")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_or41v"]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 0
script = ExtResource("1_v33uh")

[node name="MoveBodyTowards" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("1_5or4p")
accel = 96.0
offset = 0.523599
body = NodePath("..")
metadata/_custom_type_script = "uid://dkrdcai6c8yc8"

[node name="CollideAndBounce" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("2_v33uh")
body = NodePath("..")
metadata/_custom_type_script = "uid://dbwfab24e5om2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5or4p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_88jmm")
autoplay = "default"
script = ExtResource("4_pct7v")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"should_round_fps": true,
"slice": "",
"source": "res://objects/firefly/firefly.ase"
}
metadata/_aseprite_wizard_source_file_hash_ = "cf9f3bf1b868591ff4989ddf173ecb91"

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("4_ihlpy")
health = NodePath("Health")
team = 1
metadata/_custom_type_script = "uid://b8lw0lyjc35h0"

[node name="Health" type="Node" parent="Hitbox"]
script = ExtResource("5_pct7v")
has_invincibility = true
metadata/_custom_type_script = "uid://hcck4nf3qor6"

[node name="AddScoreOnDeath" type="Node" parent="Hitbox/Health" node_paths=PackedStringArray("health")]
script = ExtResource("7_or41v")
health = NodePath("..")
amount = 10
metadata/_custom_type_script = "uid://dvqcrjqt2v8rh"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_or41v")
debug_color = Color(0.996078, 0, 0.184314, 0)

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="died" from="Hitbox/Health" to="." method="_on_health_died"]
